--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node seed.ts"
   }
 }
