--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "test": "NODE_ENV=test NODE_OPTIONS='--loader=ts-node/esm' jest",
+    "test:watch": "NODE_ENV=test NODE_OPTIONS='--loader=ts-node/esm' jest --watch",
+    "test:db:migrate": "dotenv -e .env.test -- npx prisma migrate deploy",
+    "test:db:push": "dotenv -e .env.test -- npx prisma db push",
+    "test:db:reset": "dotenv -e .env.test -- npx prisma migrate reset --force",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.11.1",
@@ -34,6 +39,6 @@
     "typescript": "^5"
   },
   "prisma": {
-    "seed": "ts-node seed.ts"
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
