refactored: seed-test-db file to seed test db - seed.ts to use correct file paths, jest setup for correct file paths and updated readme

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "NODE_ENV=test jest",
+    "seed": "ts-node prisma/seed.ts",
+    "seed:test": "NODE_ENV=test ts-node prisma/seed.ts",
     "test:watch": "NODE_ENV=test jest --watch",
     "test:db:push": "dotenv -e .env.test -- npx prisma db push",
     "test:db:migrate": "dotenv -e .env.test -- npx prisma migrate deploy",
