--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "next": "15.3.4",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "tsx": "^4.20.3",
     "uuid": "^11.1.0"
   },
