--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "supertest": "^7.1.3",
     "tsx": "^4.20.3",
     "uuid": "^11.1.0"
   },
