--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
